--- a/src/main/resources/templates/a_propos.html
+++ b/src/main/resources/templates/a_propos.html
@@ -18,14 +18,14 @@
 </head>
 <body>
 <div class="container-fluid" id="wrapper">
-    <div class="text-center py-4">
+    <div class="text-center py-4 pt-5">
         <a id="logo" th:href="@{/}"><img th:src="@{/images/Logos/Logo PNG.png}" alt="PictoPicto">
     </div>
     <div class="container">
         <table class="table table-hover px-auto text-light text-center">
             <thead>
             <tr>
-                <th scope="col" colspan="2"><h2 class="display-6 my-2">Equipe de Développement</h2></th>
+                <th scope="col" colspan="2"><h2 class="display-6 my-2 pb-4">Equipe de Développement</h2></th>
             </tr>
             </thead>
             <tbody>
@@ -38,29 +38,11 @@
                 <td>Responsable Développement Informatique</td>
             </tr>
             <tr>
-                <th scope="row">Mohammad Saleh Trissi</th>
+                <th scope="row">Raymond SARAY</th>
                 <td>Développement Informatique</td>
             </tr>
             <tr>
-                <th scope="row">Paloma VACHERON</th>
-                <td>Développement Informatique</td>
-            </tr>
-            <tr>
-                <th scope="row">Elodie AGOUTIN</th>
-                <td>Développement Informatique</td>
-            </tr>
-            <tr>
-                <th scope="row">François THIALON</th>
-                <td>Développement Informatique</td>
-            </tr>
-            <tr>
-                <th scope="row">Cyril ACACIO</
-
-                th>
-                <td>Développement Informatique</td>
-            </tr>
-            <tr>
-                <th scope="row">Tristan RUDRAUF</th>
+                <th scope="row">Nicolas TATARINOFF</th>
                 <td>Développement Informatique</td>
             </tr>
             <tr>
