--- a/src/main/resources/templates/mentions.html
+++ b/src/main/resources/templates/mentions.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 <div class="container-fluid text-center" id="wrapper">
-    <div class="text-center py-4">
-        <a id="logo" th:href="@{/}"><img th:src="@{/images/Logos/Logo PNG.png}" alt="PictoPicto"></a>
-    </div>
+<!--    <div class="text-center py-4">-->
+<!--        <a id="logo" th:href="@{/}"><img th:src="@{/images/Logos/Logo PNG.png}" alt="PictoPicto"></a>-->
+<!--    </div>-->
     <div class="container">
         <div>
-            <h1 class="text-center my-5">Mentions légales</h1>
+            <h1 class="text-center my-3 pb-3 pt-3 text-white">Mentions légales</h1>
             <p class="fst-italic fs-6 text-center text-white">En vigueur au 14/04/2021</p>
             <p class="text-white">Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin
                 2004 pour la
