--- a/src/main/resources/templates/partners.html
+++ b/src/main/resources/templates/partners.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="container-fluid" id="wrapper">
-    <div class="text-center py-4">
+    <div class="text-center py-4 pt-5">
         <a id="logo" th:href="@{/}"><img th:src="@{/images/Logos/Logo PNG.png}" alt="PictoPicto">
         </a>
     </div>
@@ -27,7 +27,7 @@
         <table class="table table-hover px-auto text-light text-center">
             <thead>
             <tr>
-                <th colspan="2"><h2 class="display-6 my-2">Partenaires</h2></th>
+                <th colspan="2"><h2 class="display-6 my-2 pb-3">Partenaires</h2></th>
             </tr>
             </thead>
             <tbody>
