--- a/src/main/resources/templates/inscriptionEchec.html
+++ b/src/main/resources/templates/inscriptionEchec.html
@@ -9,7 +9,7 @@
     <div class="container a-container" id="a-container">
         <form class="form" id="a-form">
             <h1 class="switch__title title-2">Echec de l'inscription !</h1>
-            <p class="switch__description description">Une erreur est survenue lors de l'enregistrement des données.</p><br>>
+            <p class="switch__description description">Une erreur est survenue lors de l'enregistrement des données.</p><br>
             <p class="switch__description description">Veuillez ressaisir vos données sur la page d'inscription.</p><br>
             <a th:href="@{/register}" class="switch__button button-i switch-btn a-button" type="button">
                 <p>Retourner sur la page d'inscription</p>
