maj reset-password

--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -63,7 +63,7 @@
                 </div>
                 <!--                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
                 <div>
-                    <a th:href="@{/forgot_password_request}" class="form__link">Mot de passe oublié ?</a>
+                    <a th:href="@{/forgot_password}" class="form__link">Mot de passe oublié ?</a>
                 </div>
                 <div>
                     <button type="submit" id="logIn" class="switch__button button switch-btn a-button">Se connecter
