--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="Application web destinée aux enfants, adolescents et adultes souffrant d'autisme, de trouble du langage, de la communication et de l'attention"/>
-    <title>Réinitialisation du mot de passe</title>
+    <title>Message</title>
     <link rel="stylesheet" th:href="@{/css/test.css}" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,27 +21,8 @@
 </div>
 
 <main id="homeWrapper" class="container rounded my-4 py-4 px-5 pt-5">
-    <h2 class="text-center py-3 title">Réinitialiser votre mot de passe</h2>
-    <div class="text-center pb-5">
-        Merci d'entrer votre adresse email.<br/>
-        Nous vous enverrons un lien pour la réinitialisation.
-    </div>
-    <div class="text-center md-6">
-        <form name="reset_password_request_form" method="post">
-            <div>
-                <input type="email" id="reset_password_request_form_email"
-                       name="reset_password_request_form[email]" required="required" placeholder="Votre email"
-                       class="form-control"/>
-            </div>
-        </form>
-    </div>
+    <h2 class="text-center pb-5 py-4 title" th:text="${message}"></h2>
 
-    <div class="text-center py-4">
-        <button class="btn switch__button resetPassword">Envoyer</button>
-    </div>
-
-    <input type="hidden" id="reset_password_request_form__token" name="reset_password_request_form[_token]"
-           value="d9310c8cbcba1cffad660fe4319.OpGKrERtLgholrRfyaZf80QxnxeVCG5MwfC6duQFEk4.VujBxwo0HV4B9OA1v5QOuxZE1i6iP1skiZ7dIIhGfix10rvABjQDcFnu4Q"/>
 </main>
 <div class="mt-5 text-center ">
     <a class="Retour" th:href="@{/}">Retour à l'accueil</a>
