reset_password ok (utiliser mailhog pour tester en local)

--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -32,21 +32,19 @@
             <div>
                 <input type="password" name="password" placeholder="Entrer votre mot de passe"
                        class="form-control mb-4" required autofocus/>
-                <span th:class="has-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+                <span th:class="${#fields.hasErrors('password')} ? 'has-error' : ''" th:errors="*{password}"></span>
             </div>
             <div>
                 <input type="password" name="confirmPassword"
                        placeholder="Confirmer votre mot de passe"
                        class="form-control" required/>
-                <span th:class="has-error" th:if="${#fields.hasErrors('confirmPassword')}"
-                      th:errors="*{confirmPassword}"></span>
+                <span th:class="${#fields.hasErrors('confirmPassword')} ? 'has-error' : ''" th:errors="*{confirmPassword}"></span>
             </div>
             <div class="text-center py-4">
                 <button type="submit" class="btn switch__button resetPassword">Valider</button>
             </div>
         </form>
     </div>
-
 </main>
 <div class="mt-5 text-center ">
     <a class="Retour" th:href="@{/}">Retour à l'accueil</a>
