--- a/src/main/resources/templates/inscriptionSucces.html
+++ b/src/main/resources/templates/inscriptionSucces.html
@@ -8,16 +8,12 @@
 <div class="main">
     <div class="container a-container" id="a-container">
         <form class="form" id="a-form">
-            <h1 class="switch__title title-1">Inscription validée !</h1>
-            <h2 class="switch__title title">Bienvenue sur
-                <span class="PBlue">P</span>icto<span class="PRouge">P</span>icto!</h2>
-            <p class="switch__description description">Destinée à développer la communication à l'aide de pictogrammes,
-                l'application est réservée aux professionnels de santé qui en font la demande.</p><br>
-            <p class="switch__description description">L'inscription vous permettra un suivi des progrès de votre
-                patient
-                ainsi que l'intégration de nouveaux pictogrammes choisis par vos soins.</p><br>
+            <h1 class="title-succes">Un lien d'activation de votre compte vous a été envoyé à votre adresse email !</h1>
+            <h2 class="switch__title title"><span class="PBlue">P</span>icto<span class="PRouge">P</span>icto</h2>
+            <p class="switch__description description">Veuillez confirmer l'activation de votre compte en cliquant sur
+                le lien qui vous a été envoyé sur votre adresse email.</p><br>
             <a th:href="@{/}" class="switch__button button-i switch-btn a-button" type="button">
-                <p>Se rendre sur la page de connexion</p>
+                <p>Retour à l'accueil</p>
             </a>
         </form>
         <div class="droit padding-b">
