ajout API reCAPTCHA Enterprise

--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -5,6 +5,8 @@
     <title>Inscription</title>
     <link rel="stylesheet" href="/css/inscription.css"/>
     <link rel="icon" type="favicon" th:href="@{/images/Logos/Logo.png}"/>
+    <head>
+        <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdIW6ImAAAAAG4yrzp0NKLCEa55-r_ybydN1GCo"></script>
 </head>
 <body>
 <div class="main">
@@ -46,7 +48,7 @@
                     <span th:class="has-error" th:if="${#fields.hasErrors('telephone')}"
                           th:errors="*{telephone}"></span>
                 </div>
-                (*champ requis)
+                <p>(*champ requis)</p><br>
             </div>
         </div>
         <div class="switch" id="connexion switch-cnt">
@@ -76,7 +78,6 @@
                         spécial et comporter au moins 8 caractères.
                     </p>
                 </div>
-
                 <div>
                     <a th:href="@{/}" class="form__link">Déjà inscrit ?</a>
                 </div>
@@ -88,7 +89,19 @@
             </div>
         </div>
     </form>
-    <br>
 </div>
+<!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
+<script>
+    function onClick(e) {
+        e.preventDefault();
+        grecaptcha.enterprise.ready(async () => {
+            const token = await grecaptcha.enterprise.execute('6LdIW6ImAAAAAG4yrzp0NKLCEa55-r_ybydN1GCo', {action: 'REGISTER'});
+            // IMPORTANT: The 'token' that results from execute is an encrypted response sent by
+            // reCAPTCHA Enterprise to the end user's browser.
+            // This token must be validated by creating an assessment.
+            // See https://cloud.google.com/recaptcha-enterprise/docs/create-assessment
+        });
+    }
+</script>
 </body>
 </html>
