--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 </head>
 <body>
-<h3>Activation du compte Professionnel de santé PIctoPicto</h3>
+<h3 class="pt-3 pb-3">Activation du compte Professionnel de santé PictoPicto</h3>
 <p>Cliquez sur le lien suivant pour activer votre compte : </p>
 <p><a th:href="@{${verificationLink}}" target="_blank">Activer le compte</a></p>
 <p>Ignorez cet email si vous ne vous êtes pas inscrit sur PictoPicto.</p>
