switch activation compte pro par admin

--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -111,7 +111,7 @@
 
                     <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
                                                                              th:classappend="${module == 'consulterLesPros' ? 'active' : ''}"
-                                                                             th:href="@{/consulterLesPros}">Liste des
+                                                                             th:href="@{/consulterLesPros/listeDesPros}">Liste des
                         professionnels de santé</a></li>
 
                     <li class="nav-item"><a class="nav-link"
