--- a/src/main/resources/templates/consulterLesPros.html
+++ b/src/main/resources/templates/consulterLesPros.html
@@ -30,7 +30,7 @@
                 <td th:text="${professionnel.email}">Email</td>
                 <td th:text="${professionnel.telephone}">Téléphone</td>
                 <td>
-                    <a class="btn btn-primary" href="#" th:href="@{/consulterLesPros/{id}(id=${professionnel.id})}">Détails</a>
+                    <a class="btn btn-primary" href="#" th:href="@{/consulterLesPros/detailsPro/{id}(id=${professionnel.id})}">Détails</a>
                 </td>
             </tr>
         </tbody>
