--- a/src/main/resources/templates/detailsPro.html
+++ b/src/main/resources/templates/detailsPro.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
 <head>
-  <title>Informations du professionnel</title>
+    <title>Informations du professionnel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -10,39 +13,68 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
+            <div th:if="${message}" th:text="${message}" class="text-center alert alert-info"></div>
             <h3 class="card-title">Informations de contact du professionnel de santé</h3>
             <br>
-            <h5 class="card-subtitle" th:text="'Service: ' + ${professionnel.service}">Service</h5>
-            <a th:text="'Nom: ' + ${professionnel.nom}">Nom</a><br>
-            <a th:text="'Prénom: ' + ${professionnel.prenom}">Prénom</a><br>
-            <a th:text="'Email: ' + ${professionnel.email}">Email</a><br>
-            <p th:text="'Téléphone: ' + ${professionnel.telephone}">Téléphone</p>
-            <a class="btn btn-primary btn-sm" href="#" th:href="@{mailto:{to}(to=${professionnel.email})}">Envoyer un Email</a>
+            <h5 class="card-subtitle" th:text="'Service: ' + ${professionnel?.service}">Service</h5>
+            <a th:text="'Nom: ' + ${professionnel?.nom}">Nom</a><br>
+            <a th:text="'Prénom: ' + ${professionnel?.prenom}">Prénom</a><br>
+            <a th:text="'Email: ' + ${professionnel?.email}">Email</a><br>
+            <p th:text="'Téléphone: ' + ${professionnel?.telephone}">Téléphone</p>
+            <div class="d-flex align-items-center">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="isActiveSwitch" name="isActive"
+                           th:checked="${professionnel?.isActive}">
+                    <label class="form-check-label" for="isActiveSwitch">Désactiver/Activer le compte</label>
+                </div>
+                <form th:action="@{/consulterLesPros/{id}/activationCompte(id=${professionnel?.id})}" method="post" class="ms-3">
+                    <input type="hidden" id="isActiveHidden" name="isActive" th:value="${professionnel?.isActive}">
+                    <button type="submit" class="btn btn-primary btn-sm">Valider</button>
+                </form>
+            </div>
+            <a class="btn btn-info btn-sm mt-4" href="#" th:href="@{mailto:{to}(to=${professionnel?.email})}">Envoyer
+                un Email</a>
+            <div class="mt-3 mb-3 text-center ">
+                <a class="Retour text-info" th:href="@{/consulterLesPros/listeDesPros}">[Retour]</a>
+            </div>
         </div>
     </div>
-    <div class="container" >
+    <div class="container">
         <table class="table">
             <thead>
             <th scope="col">Numéro du dossier médical</th>
             <th scope="col">Nom</th>
             <th scope="col">Prénom</th>
-             <th scope="col">Date de naissance</th>
+            <th scope="col">Date de naissance</th>
             </thead>
             <tbody>
             <tr th:each="dossierMedical : ${dossierMedicals}">
-                <td th:text="${dossierMedical.id}">Numéro du dossier médical</td>
-                <td th:text="${dossierMedical.nom}">Nom du patient</td>
-                <td th:text="${dossierMedical.prenom}">Prénom du patient</td>
-                <td th:text="${dossierMedical.dateNaissance}">Date de naissance</td>
+                <td th:text="${dossierMedical?.id}">Numéro du dossier médical</td>
+                <td th:text="${dossierMedical?.nom}">Nom du patient</td>
+                <td th:text="${dossierMedical?.prenom}">Prénom du patient</td>
+                <td th:text="${dossierMedical?.dateNaissance}">Date de naissance</td>
             </tr>
             </tbody>
         </table>
     </div>
 </div>
 
-
 <div th:replace="~{components/footer :: footer}"></div>
+
+<script>
+    var isActiveSwitch = document.getElementById("isActiveSwitch");
+    var isActiveHidden = document.getElementById("isActiveHidden");
+
+    isActiveSwitch.addEventListener("change", function () {
+        isActiveHidden.value = isActiveSwitch.checked;
+    });
+</script>
 
 </body>
 
 </html>
+
+
+
+
+
