maj detailsDossier & detailsPro

--- a/src/main/resources/templates/detailsPro.html
+++ b/src/main/resources/templates/detailsPro.html
@@ -27,7 +27,8 @@
                            th:checked="${professionnel?.isActive}">
                     <label class="form-check-label" for="isActiveSwitch">Désactiver/Activer le compte</label>
                 </div>
-                <form th:action="@{/consulterLesPros/{id}/activationCompte(id=${professionnel?.id})}" method="post" class="ms-3">
+                <form th:action="@{/consulterLesPros/{id}/activationCompte(id=${professionnel?.id})}" method="post"
+                      class="ms-3">
                     <input type="hidden" id="isActiveHidden" name="isActive" th:value="${professionnel?.isActive}">
                     <button type="submit" class="btn btn-primary btn-sm">Valider</button>
                 </form>
@@ -56,6 +57,9 @@
             </tr>
             </tbody>
         </table>
+        <div th:if="${dossierMedicals.isEmpty()}" class="text-center alert alert-info">
+            Aucun dossier médical enregistré par le professionnel
+        </div>
     </div>
 </div>
 
@@ -73,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
