--- a/src/main/resources/templates/detailsDossier.html
+++ b/src/main/resources/templates/detailsDossier.html
@@ -12,13 +12,14 @@
         <div class="card-body">
             <h3 class="card-title">Informations du dossier médical du patient</h3>
             <br>
-            <h5 class="card-subtitle" th:text="'Progression: ' + ${dossierMedical.progression}">Service</h5>
+<!--            <h5 class="card-subtitle" th:text="'Progression: ' + ${dossierMedical.progression}">Progression</h5>-->
             <a th:text="'Nom: ' + ${dossierMedical.nom}">Nom</a><br>
             <a th:text="'Prénom: ' + ${dossierMedical.prenom}">Prénom</a><br>
             <a th:text="'Date de naissance: ' + ${dossierMedical.dateNaissance}">Date de naissance</a><br>
+            <a th:text="'Progression: ' + ${dossierMedical.progression}">Progression</a><br>
             <p th:text="'Statistique: ' + ${dossierMedical.statistique}">Statistiques</p>
             <div class="mt-3 mb-3 text-center ">
-                <a class="Retour" th:href="@{/consulterLesDossiers}">[Retour]</a>
+                <a class="Retour text-info" th:href="@{/consulterLesDossiers}">[Retour]</a>
             </div>
         </div>
     </div>
@@ -39,6 +40,9 @@
             </tr>
             </tbody>
         </table>
+        <div th:if="${phrases.isEmpty()}" class="text-center alert alert-info">
+            Aucune phrase enregistrée par le patient
+        </div>
     </div>
 </div>
 
