--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -137,7 +137,7 @@
                                         </div>
                                         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
                                             <div class="d-grid gap-2 mt-3">
-                                                <a th:href="@{'/deleteCompte/'+ ${user.id} }" onclick="return confirm('Etes-vous sûr de vouloir supprimer votre compte ?')" class="btn btn-lg btn-danger">Supprimer le compte</a>
+                                                <a th:href="@{'/deleteCompte/'+ ${user.id} }" onclick="return confirm('Etes-vous sûr de vouloir supprimer votre compte ? Attention les dossiers médicaux enregistrés seront aussi supprimés.')" class="btn btn-lg btn-danger">Supprimer le compte</a>
                                             </div>
                                         </div>
                                     </div>
