--- a/src/main/resources/templates/consulterLesDossiers.html
+++ b/src/main/resources/templates/consulterLesDossiers.html
@@ -39,6 +39,9 @@
             </tr>
         </tbody>
     </table>
+    <div th:if="${dossierMedicals.isEmpty()}" class="text-center alert alert-info">
+        Aucun dossier enregistré
+    </div>
 </div>
 
 
