--- a/src/main/resources/templates/consulterLesPros.html
+++ b/src/main/resources/templates/consulterLesPros.html
@@ -35,6 +35,9 @@
             </tr>
         </tbody>
     </table>
+    <div th:if="${professionnels.isEmpty()}" class="text-center alert alert-info">
+        Aucun professionnel de santé enregistré
+    </div>
 </div>
 
 
