--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,6 +3,7 @@
 <head>
     <title>Erreur 404</title>
     <link rel="stylesheet" href="/css/succesEchec.css"/>
+    <link rel="icon" type="favicon" th:href="@{/images/Logos/Logo.png}"/>
 </head>
 <body>
 <div class="main">
